--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="col-xl-5 col-lg-5 col-md-5 co-sm-l2">
                     <div class="about_box">
                         <h2>About Myhal<br><strong class="black">India's No 1 Agriculture Classified and Market place</strong></h2>
-                        <p>At MYHAL, we are dedicated to empowering farmers, buyers, and agricultural businesses by creating a seamless online marketplace for all farming needs. Our platform connects farmers directly with buyers, suppliers, and service providers, ensuring fair trade, transparency, and better profitability.</p>
+                        <p>At MYHAL,a brand proudly owned by Vana Enterprise, we are dedicated to empowering farmers, buyers, and agricultural businesses by creating a seamless online marketplace for all farming needs. Our platform connects farmers directly with buyers, suppliers, and service providers, ensuring fair trade, transparency, and better profitability.</p>
                         <a href="#">Read More</a>
                     </div>
                 </div>
