--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -109,7 +109,7 @@
         <h2>1. Information We Collect</h2>
         <ul>
           <li><strong>Personal Identification Information</strong> (e.g., Name, Phone, Email).</li>
-          <li><strong>Location Data (Mandatory, Foreground Use Only):</strong> We require your location to provide our services. Your location may be determined using GPS, network information, or manual pin selection. Location access is mandatory for showing nearby listings and connecting you with local buyers and sellers. We do not collect or track your location in the background when the app is closed, and we do not permanently store location data, except as required for fraud prevention, dispute resolution, or legal compliance.</li>
+          <li><strong>Location Data:</strong> Our applications collect real-time information about the location of your device, as permitted by you. Precise location (via GPS, network, or manual pin selection) is required to show nearby listings and connect you with local buyers and sellers. Some features of our services cannot function without access to your location. We do not track your location in the background when the app is closed, and we do not permanently store location data, except as required for fraud prevention, dispute resolution, or legal compliance.</li>
           <li><strong>Device and Log Data</strong> (e.g., device type, operating system, app usage logs).</li>
         </ul>
       </section>
