--- a/Agricultureclassified.html
+++ b/Agricultureclassified.html
@@ -62,7 +62,7 @@
                                 <li><img src="icon/email1.png" />hello@myhal.in</li>
 
                                 <li><img src="icon/call1.png" />(+91)9876543109</li>
-                                <li style="height: 50px;"><img src="images/gplay.png" width="150" height="50"/></li>
+                                <li style="height: 50px;"><a href="https://play.google.com/store/apps/details?id=com.myhal.myhal" target="_blank" rel="noopener noreferrer"><img class="play-badge" src="images/gplay.png" width="150" height="50" alt="Google Play Store"/></a></li>
                             </ul>
                         </div>
                     </div>
@@ -196,13 +196,13 @@
                             <h3>Contact Us</h3>
 
                             <ul class="loca">
-                                <li>
-                                    <a href="#"><img src="icon/loc.png" alt="#" /></a>Uttar Pradesh
-                                    <br>India </li>
-                                <li>
-                                    <a href="#"><img src="icon/email.png" alt="#" /></a>hello@myhal.in </li>
-                                <li>
-                                    <a href="#"><img src="icon/call.png" alt="#" /></a>+91990909090 </li>
+                                <ul>
+                               
+                                    <li><img src="icon/email1.png" />hello@myhal.in</li>
+
+                                    <li><img src="icon/call1.png" />(+91)9876543109</li>
+                                </ul>
+                                <div class="header-badge"><a href="https://play.google.com/store/apps/details?id=com.myhal.myhal" target="_blank" rel="noopener noreferrer" aria-label="Download MYHAL on Google Play (opens in new tab)" title="Download MYHAL on Google Play"><img class="play-badge" src="images/gplay.png" width="150" height="50" alt="Download MYHAL on Google Play"/><span class="sr-only">Download MYHAL on Google Play (opens in new tab)</span></a></div>
                             </ul>
                         </div>
                     </div>
