--- a/landscape.html
+++ b/landscape.html
@@ -62,8 +62,8 @@
                                 <li><img src="icon/email1.png" />hello@myhal.in</li>
 
                                 <li><img src="icon/call1.png" />(+91)9876543109</li>
-                                <li style="height: 50px;"><img src="images/gplay.png" width="150" height="50"/></li>
                             </ul>
+                            <div class="header-badge"><a href="https://play.google.com/store/apps/details?id=com.myhal.myhal" target="_blank" rel="noopener noreferrer" aria-label="Download MYHAL on Google Play (opens in new tab)" title="Download MYHAL on Google Play"><img class="play-badge" src="images/gplay.png" width="150" height="50" alt="Download MYHAL on Google Play"/><span class="sr-only">Download MYHAL on Google Play (opens in new tab)</span></a></div>
                         </div>
                     </div>
                 </div>
