--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- mobile metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
     <title>MYHAL — India's #1 Agriculture Marketplace</title>
-    <meta name="keywords" content="Agriculture,tractor,landscape,ornamental plants, agriculture Comodities,Khaad,fertilizers,Nutrients Farming, Marketplace, Classifieds, Farmers, Agricultural Products, AI Solutions">
+    <meta name="keywords" content="Agriculture, Tractor, Landscaping, Ornamental Plants, Agriculture Commodities, Khaad, Fertilizers, Nutrients, Farming, Marketplace, Classifieds, Farmers, Agricultural Products, Animals">
     <meta name="description" content="MYHAL is India's #1 agriculture marketplace to buy, sell and rent farm products and equipment. Post free ads, connect with verified buyers and get better prices with no middlemen.">
     <meta name="author" content="MyHAL">
     <!-- Open Graph meta tags -->
@@ -20,13 +19,19 @@
     <meta property="og:image" content="images/MyHAL.png">
     <meta property="og:url" content="https://www.myhal.in">
     <meta property="og:type" content="website">
+    <meta property="og:site_name" content="MyHAL">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MYHAL — India's #1 Agriculture Marketplace">
+    <meta name="twitter:description" content="MYHAL is India's leading agriculture classfied and marketplace app connecting farmers, buyers, and suppliers for seamless trade and better profitability. Farmers can list their products for free, connect with buyers directly, and earn fair prices without any middlemen.">
+    <meta name="twitter:image" content="https://www.myhal.in/images/MyHAL.png">
     <link rel="manifest" href="manifest.json">
     <meta name="google-play-app" content="app-id=com.myhal.myhal">
     <meta name="theme-color" content="#052501">
         <!-- SEO additions -->
         <link rel="canonical" href="https://www.myhal.in/">
-        <link rel="alternate" href="https://www.myhal.in/index.html" hreflang="en" />
+    <link rel="alternate" href="https://www.myhal.in/index.html" hreflang="en" />
         <link rel="alternate" href="https://www.myhal.in/hi/index.html" hreflang="hi" />
+    <link rel="alternate" href="https://www.myhal.in/" hreflang="x-default" />
         <meta name="robots" content="index, follow">
         <!-- Organization structured data -->
         <script type="application/ld+json">
@@ -36,7 +41,22 @@
             "name":"MyHAL",
             "url":"https://www.myhal.in",
             "logo":"https://www.myhal.in/images/MyHAL.png",
-            "sameAs":["https://www.facebook.com/","https://twitter.com/"]
+            "sameAs":[
+                "https://instagram.com/myhalindia",
+                "https://www.youtube.com/@myhalindia",
+                "https://facebook.com/myhalindia"
+            ]
+        }
+        </script>
+    <link rel="apple-touch-icon" href="images/MyHAL.png">
+    <meta property="og:locale" content="en_IN">
+    <meta property="og:locale:alternate" content="hi_IN">
+        <script type="application/ld+json">
+        {
+            "@context":"https://schema.org",
+            "@type":"WebSite",
+            "name":"MyHAL",
+            "url":"https://www.myhal.in"
         }
         </script>
     <!-- bootstrap css -->
@@ -489,12 +509,12 @@
                 { title: 'Groundnut (100 kg)', price: '₹7,800', priceLabel:'Per 100 kg:', type:'Sell', views:27, distance:'22.5 km away', location: 'Anand, GJ', img: 'https://im.myhal.in/website/groundnut.jpg', link: 'Agricultureclassified.html' }
             ],
             landscaping: [
-                { title: 'Areca Palm (5 ft)', price: '₹850', priceLabel:'Per Plant:', type:'Sell', views:12, distance:'5.1 km away', location: 'Pune, MH', img: 'images/landscape.jpg', link: 'landscape.html' },
-                { title: 'Ficus Hedge (per meter)', price: '₹120', priceLabel:'Per Meter:', type:'Sell', views:9, distance:'11.4 km away', location: 'Gurgaon, HR', img: 'images/landscape.jpg', link: 'landscape.html' },
-                { title: 'Lawn Grass Rolls', price: '₹35/sqft', priceLabel:'Per Sqft:', type:'Sell', views:21, distance:'7.8 km away', location: 'Bengaluru, KA', img: 'images/landscape.jpg', link: 'landscape.html' },
-                { title: 'Bougainvillea (Flowering)', price: '₹180', priceLabel:'Per Plant:', type:'Sell', views:15, distance:'15.0 km away', location: 'Hyderabad, TS', img: 'images/landscape.jpg', link: 'landscape.html' },
-                { title: 'Drip Irrigation Kit', price: '₹2,500', priceLabel:'Price:', type:'Sell', views:8, distance:'21.2 km away', location: 'Ahmedabad, GJ', img: 'images/landscape.jpg', link: 'landscape.html' },
-                { title: 'Garden Pebbles (25 kg)', price: '₹420', priceLabel:'Per 25 kg:', type:'Sell', views:10, distance:'14.3 km away', location: 'Indore, MP', img: 'images/landscape.jpg', link: 'landscape.html' }
+                { title: 'Areca Palm (5 ft)', price: '₹850', priceLabel:'Per Plant:', type:'Sell', views:12, distance:'5.1 km away', location: 'Pune, MH', img: 'https://im.myhal.in/palm/ArecaPalm_1_11zon.jpg', link: 'landscape.html' },
+                { title: 'Rainbow Tree', price: '₹1,200', priceLabel:'Per Plant:', type:'Sell', views:9, distance:'11.4 km away', location: 'Gurgaon, HR', img: 'https://im.myhal.in/imported/EucalyptusDelgupta_9_11zon.jpg', link: 'landscape.html' },
+                { title: 'Ficus Panda', price: '₹950', priceLabel:'Per Plant:', type:'Sell', views:21, distance:'7.8 km away', location: 'Bengaluru, KA', img: 'https://im.myhal.in/ficus/FicusPanda_8_11zon.jpg', link: 'landscape.html' },
+                { title: 'Earth Auger', price: '₹6,500', priceLabel:'Price:', type:'Sell', views:15, distance:'15.0 km away', location: 'Hyderabad, TS', img: 'https://im.myhal.in/appicon/EarthAugermin.jpg', link: 'landscape.html' },
+                { title: 'Chinese Fan Palm', price: '₹1,500', priceLabel:'Per Plant:', type:'Sell', views:8, distance:'21.2 km away', location: 'Ahmedabad, GJ', img: 'https://im.myhal.in/palm/ChineseFanPalm_5_11zon.jpg', link: 'landscape.html' },
+                { title: 'Dragon Tree', price: '₹2,200', priceLabel:'Per Plant:', type:'Sell', views:10, distance:'14.3 km away', location: 'Indore, MP', img: 'https://im.myhal.in/imported/DragonTree_8_11zon.jpg', link: 'landscape.html' }
             ],
             equipment: [
                 { title: 'Tractor (45 HP) for rent', price: '₹850/hr', priceLabel:'Rent:', type:'Rent', views:44, distance:'8.2 km away', location: 'Nagpur, MH', img: 'https://im.myhal.in/FarmMachinery/Tractors.jpg', link: 'Equipment.html' },
@@ -505,12 +525,12 @@
                 { title: 'Trailer (7x4)', price: '₹68,000', priceLabel:'Price:', type:'Sell', views:11, distance:'12.9 km away', location: 'Kolhapur, MH', img: 'https://im.myhal.in/FarmMachinery/TractorTrolleyandTipper.jpg', link: 'Equipment.html' }
             ],
             nutrients: [
-                { title: 'Urea 46%N (45 kg)', price: '₹266', priceLabel:'Per Bag:', type:'Sell', views:52, distance:'10.1 km away', location: 'Patiala, PB', img: 'images/khaad.jpg', link: 'fertilizer.html' },
-                { title: 'DAP 18-46-0 (50 kg)', price: '₹1,350', priceLabel:'Per Bag:', type:'Sell', views:34, distance:'18.0 km away', location: 'Rewa, MP', img: 'images/khaad.jpg', link: 'fertilizer.html' },
-                { title: 'Bio-Organic Manure (25 kg)', price: '₹390', priceLabel:'Per Bag:', type:'Sell', views:21, distance:'6.8 km away', location: 'Aurangabad, MH', img: 'images/khaad.jpg', link: 'fertilizer.html' },
-                { title: 'Potash MOP (50 kg)', price: '₹1,180', priceLabel:'Per Bag:', type:'Sell', views:17, distance:'23.4 km away', location: 'Rajkot, GJ', img: 'images/khaad.jpg', link: 'fertilizer.html' },
-                { title: 'Neem Oil (1 L)', price: '₹280', priceLabel:'Per Litre:', type:'Sell', views:19, distance:'9.1 km away', location: 'Hooghly, WB', img: 'images/khaad.jpg', link: 'fertilizer.html' },
-                { title: 'Insecticide (Imidacloprid 30.5%)', price: '₹720', priceLabel:'Per Bottle:', type:'Sell', views:14, distance:'15.6 km away', location: 'Nellore, AP', img: 'images/khaad.jpg', link: 'fertilizer.html' }
+                { title: 'Press Mud (1 ton)', price: '₹1,600', priceLabel:'Per Ton:', type:'Sell', views:33, location: 'Rajkot, GJ', img: 'https://im.myhal.in/organiccompost/Sugarcanepressmud_6_11zon.jpg', link: 'fertilizer.html' },
+                { title: 'Vermi Compost (50 kg)', price: '₹350', priceLabel:'Per Bag:', type:'Sell', views:41, location: 'Patiala, PB', img: 'https://im.myhal.in/organiccompost/VermiCompost_7_11zon.jpg', link: 'fertilizer.html' },
+                { title: 'Cow Dung Manure (50 kg)', price: '₹220', priceLabel:'Per Bag:', type:'Sell', views:29, location: 'Aurangabad, MH', img: 'https://im.myhal.in/Machinary/gobarkakhaad.jpg', link: 'fertilizer.html' },
+                { title: 'Poultry Farm Manure (25 kg)', price: '₹180', priceLabel:'Per Bag:', type:'Sell', views:24, location: 'Nellore, AP', img: 'https://im.myhal.in/organiccompost/PoultryFarmManure_4_11zon.jpg', link: 'fertilizer.html' },
+                { title: 'Vermi Compost (Bulk 1 ton)', price: '₹9,500', priceLabel:'Per Ton:', type:'Sell', views:22, location: 'Rewa, MP', img: 'https://im.myhal.in/organiccompost/VermiCompost_7_11zon.jpg', link: 'fertilizer.html' },
+                { title: 'Goat Farm Manure (25 kg)', price: '₹240', priceLabel:'Per Bag:', type:'Sell', views:26, location: 'Hooghly, WB', img: 'https://im.myhal.in/organiccompost/GoatFarmManure_3_11zon.jpg', link: 'fertilizer.html' }
             ],
             animal: [
                 { title: 'HF Cow (Milking)', price: '₹62,000', priceLabel:'Price:', type:'Sell', views:33, location: 'Karnal, HR', img: 'https://im.myhal.in/website/Pure-Breed-HF-Cow..jpg', link: 'Agricultureclassified.html' },
@@ -521,12 +541,12 @@
                 { title: 'Jersey Cow (Milking)', price: '₹58,000', priceLabel:'Price:', type:'Sell', views:21, location: 'Pune, MH', img: 'https://im.myhal.in/website/Pure-Breed-Jersey-Cow.jpg', link: 'Agricultureclassified.html' }
             ],
             commodities: [
-                { title: 'Chana (100 kg)', price: '₹6,200', priceLabel:'Market Price:', type:'Commodity', views:55, distance:'Kota Mandi', location: 'Kota, RJ', img: 'images/commodities.jpg', link: 'agriculturecomodities.html' },
-                { title: 'Soybean (100 kg)', price: '₹5,800', priceLabel:'Market Price:', type:'Commodity', views:47, distance:'Ujjain Mandi', location: 'Ujjain, MP', img: 'images/commodities.jpg', link: 'agriculturecomodities.html' },
-                { title: 'Tur (Arhar) (100 kg)', price: '₹10,900', priceLabel:'Market Price:', type:'Commodity', views:39, distance:'Latur Mandi', location: 'Latur, MH', img: 'images/commodities.jpg', link: 'agriculturecomodities.html' },
-                { title: 'Onion (100 kg)', price: '₹2,150', priceLabel:'Market Price:', type:'Commodity', views:63, distance:'Lasalgaon Mandi', location: 'Nashik, MH', img: 'images/commodities.jpg', link: 'agriculturecomodities.html' },
-                { title: 'Potato (100 kg)', price: '₹1,650', priceLabel:'Market Price:', type:'Commodity', views:28, distance:'Agra Mandi', location: 'Agra, UP', img: 'images/commodities.jpg', link: 'agriculturecomodities.html' },
-                { title: 'Wheat (100 kg)', price: '₹2,900', priceLabel:'Market Price:', type:'Commodity', views:46, distance:'Karnal Mandi', location: 'Karnal, HR', img: 'images/commodities.jpg', link: 'agriculturecomodities.html' }
+                { title: 'Wheat (100 kg)', price: '₹2,900', priceLabel:'Market Price:', type:'Commodity', views:62, distance:'Karnal Mandi', location: 'Karnal, HR', img: 'https://im.myhal.in/commodites/Wheat_16_11zon.jpg', link: 'agriculturecomodities.html' },
+                { title: 'Rice (100 kg)', price: '₹3,200', priceLabel:'Market Price:', type:'Commodity', views:54, distance:'Nellore Mandi', location: 'Nellore, AP', img: 'https://im.myhal.in/commodites/Rice_9_11zon.jpg', link: 'agriculturecomodities.html' },
+                { title: 'Cotton (100 kg)', price: '₹6,800', priceLabel:'Market Price:', type:'Commodity', views:49, distance:'Rajkot Mandi', location: 'Rajkot, GJ', img: 'https://im.myhal.in/commodites/Cotton_2_11zon.jpg', link: 'agriculturecomodities.html' },
+                { title: 'Tea (1 kg)', price: '₹250', priceLabel:'Market Price:', type:'Commodity', views:57, distance:'Hooghly Market', location: 'Hooghly, WB', img: 'https://im.myhal.in/commodites/Tea_14_11zon.jpg', link: 'agriculturecomodities.html' },
+                { title: 'Coffee (1 kg)', price: '₹480', priceLabel:'Market Price:', type:'Commodity', views:45, distance:'Bengaluru Market', location: 'Bengaluru, KA', img: 'https://im.myhal.in/commodites/Coffee_1_11zon.jpg', link: 'agriculturecomodities.html' },
+                { title: 'Jaggery (100 kg)', price: '₹5000', priceLabel:'Market Price:', type:'Commodity', views:51, distance:'Dhampur', location: 'Dhampur, UP', img: 'https://im.myhal.in/commodites/Jaggery_5_11zon.jpg', link: 'agriculturecomodities.html' }
             ]
         };
 
@@ -611,20 +631,14 @@
         })();
         // Testimonial data
         const testimonials = [
-{img:'images/user1.png', name:'सुरेश चौहान', role:'झांसी, उत्तर प्रदेश', quote:'"MYHAL से जुड़ने के बाद अच्छा दाम मिला और पैसा तुरंत आया। अब किसान भी डिजिटल दुनिया में आगे बढ़ सकते हैं।"'},
-            {img:'images/user2.png', name:'সুকুমার দত্ত', role:'নদীয়া, পশ্চিমবঙ্গ', quote:'"MYHAL-এ আমার আমের ফসল খুব ভালো দামে বিক্রি হয়েছে। এটা আমার নিজের বাজার।"'},
-            {img:'images/user3.png', name:'ಬಸವರಾಜ ಪಾಟೀಲ', role:'ಬಿಜಾಪುರ, ಕರ್ನಾಟಕ', quote:'"MYHAL ಮೂಲಕ ನನ್ನ ಬೆಳೆಗೆ ಉತ್ತಮ ಬೆಲೆ ಸಿಕ್ಕಿತು, ಪಾವತಿಗಳು ತಕ್ಷಣ ಬಂದವು।"'},
-            {img:'images/user1.png', name:'వెంకటేష్ రావు', role:'గుంటూరు, ఆంధ్రప్రదేశ్', quote:'"MYHAL ద్వారా మంచి రేటుకి పంట అమ్మాను, డబ్బు వెంటనే వచ్చింది। నిజంగా రైతులకు ఉపయోగపడే యాప్."'},
-            {img:'images/user2.png', name:'முருகேசன்', role:'சேலம், தமிழ்நாடு', quote:'"MYHAL மூலம் காய்கறிகளை நேரடியாக விற்றேன். சிறந்த விலை, உடனடி பணம். சிறு விவசாயிகளுக்கு பெரிய ஆதரவு."'},
-            {img:'images/user3.png', name:'ബിജു തോമസ്', role:'കോട്ടയം, കേരളം', quote:'"MYHAL വഴി നല്ല വിലയ്ക്ക് വിറ്റു, പണം ഉടൻ കിട്ടി। ചെറുകർഷകർക്ക് വലിയ ആശ്വാസം."'},
-            {img:'images/user1.png', name:'રમિલાબેન પટેલ', role:'આનંદ, ગુજરાત', quote:'"MYHAL સાથે દૂધની વસ્તુઓ સીધા ગ્રાહકો સુધી પહોંચે છે। સારો ભાવ અને તરત ચુકવણી."'},
-            {img:'images/user2.png', name:'गणेश पाटील', role:'सांगली, महाराष्ट्र', quote:'"MYHAL वर खरेदीदार थेट संपर्क साधतात। चांगला दर आणि त्वरित पेमेंट!"'},
-            {img:'images/user3.png', name:'ਮਨਜੀਤ ਸਿੰਘ', role:'ਲੁਧਿਆਣਾ, ਪੰਜਾਬ', quote:'"MYHAL ਨਾਲ ਫਸਲ ਸਿੱਧੇ ਵੇਚੀ। ਕਮਾਈ ਵਧ ਗਈ, ਪੈਸਾ ਸਮੇਂ ਤੇ ਮਿਲਦਾ ਹੈ।"'},
-            {img:'images/user1.png', name:'ବିଜୟ ବେହେରା', role:'କଟକ, ଓଡ଼ିଶା', quote:'"MYHAL ରେ ସିଧା ଗ୍ରାହକ ସହିତ ସମ୍ପର୍କ। ଆୟ ବଢ଼ିଲା, ନିଜ ମାର୍କେଟ ଆସିଲା।"'},
-            {img:'images/user2.png', name:'অনিল বৰা', role:'নগাঁও, অসম', quote:'"MYHAL-ত ফটো দিলেই খৰিদাৰ যোগাযোগ কৰে। দুবাৰ ধান বিক্ৰী কৰি ভাল মূল্য পাইছো।"'},
-            {img:'images/user3.png', name:'غلام نبی', role:'بریلی، اتر پردیش', quote:'"MYHAL نے زندگی بدل دی۔ خود خریداروں سے رابطہ، بہتر دام اور فوری پیسے ملتے ہیں۔"'},
-            {img:'images/user1.png', name:'Ramesh Yadav', role:'Varanasi, UP', quote:'"Through MYHAL, I connected with genuine buyers, got better rates and instant payment. Technology truly helps farmers."'},
-            {img:'images/user2.png', name:'නිහාල් පෙරේරා', role:'කෑගල්ල, ශ්‍රී ලංකාව', quote:'"MYHAL මගින් බෝග සෘජුවම විකිණීමට හැකි වුණා। අලුත් පාරිභෝගිකයන්, වැඩි ලාභය."'}
+            {img:'images/user1.png', name:'Suresh Chauhan', role:'Jhansi, Uttar Pradesh', quote:'"Got a better price and instant payment through MYHAL. Simple, safe, and local."'},
+            {img:'images/user2.png', name:'Anita Verma', role:'Nadia, West Bengal', quote:'"Sold my mango produce quickly. The app connects me directly with buyers."'},
+            {img:'images/user3.png', name:'Basavaraj Patil', role:'Bijapur, Karnataka', quote:'"I can list in minutes and talk to genuine buyers. Very useful for farmers."'},
+            {img:'images/user4.png', name:'Venkatesh Rao', role:'Guntur, Andhra Pradesh', quote:'"Closed deals faster and got paid on time. Exactly what I needed."'},
+            {img:'images/user5.png', name:'Murugesan', role:'Salem, Tamil Nadu', quote:'"I sell vegetables directly without middlemen. Better rates, smooth process."'},
+            {img:'images/user6.png', name:'Biju Thomas', role:'Kottayam, Kerala', quote:'"Posting ads is easy and buyers contact me quickly. Highly recommended."'},
+            {img:'images/user7.png', name:'Ramilaben Patel', role:'Anand, Gujarat', quote:'"Dairy products reach customers directly with fair prices and quick payments."'},
+            {img:'images/user8.png', name:'Ganesh Patil', role:'Sangli, Maharashtra', quote:'"Farm tools and crops sold at fair prices. The app is simple and reliable."'}  
         ];
         
         let itemsPerPage = 4;
@@ -831,7 +845,6 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.0.0.min.js"></script>
     <script src="js/plugin.js"></script>
     <!-- sidebar -->
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
@@ -855,32 +868,7 @@
             });
         });
     </script>
-    <script>
-        // This example adds a marker to indicate the position of Bondi Beach in Sydney,
-        // Australia.
-        function initMap() {
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 11,
-                center: {
-                    lat: 40.645037,
-                    lng: -73.880224
-                },
-            });
-
-            var image = 'images/maps-and-flags.png';
-            var beachMarker = new google.maps.Marker({
-                position: {
-                    lat: 40.645037,
-                    lng: -73.880224
-                },
-                map: map,
-                icon: image
-            });
-        }
-    </script>
-    <!-- google map js -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script>
-    <!-- end google map js -->
+    <!-- Google Maps removed: not used on this page to improve load performance -->
         <!-- Google Translate widget -->
         <script>
             function googleTranslateElementInit() {
